force-app/main/default/objects/Taxes__c/Taxes__c.object-meta.xml
<CustomObject>
    <label>Imposto</label>
    <nameField>
        <displayFormat>TAX-{0000}</displayFormat>
        <label>Imposto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impostos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>