force-app/main/default/objects/Taxes__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <formula>Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Empresa</label>
    <type>Text</type>
</CustomField>