force-app/main/default/objects/Taxes__c/fields/DistributionCenterName__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenterName__c</fullName>
    <formula>DistributionCenter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do CD</label>
    <type>Text</type>
</CustomField>