force-app/main/default/objects/Taxes__c/fields/ICMS__c.field-meta.xml
<CustomField>
    <fullName>ICMS__c</fullName>
    <label>ICMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>