force-app/main/default/objects/Taxes__c/fields/ICMSFinal__c.field-meta.xml
<CustomField>
    <fullName>ICMSFinal__c</fullName>
    <formula>ICMS__c * Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICMS Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>