force-app/main/default/objects/Taxes__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>