force-app/main/default/objects/Taxes__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Região</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>