force-app/main/default/objects/Taxes__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <formula>Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Região</label>
    <type>Text</type>
</CustomField>